--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading-skeleton": "^3.5.0",
     "zustand": "^5.0.3"
   }
 }
